--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,11 @@ jobs:
       with:
         submodules: recursive
     - name: Install dependencies
-      run: brew install clang-format coreutils cmake doxygen giflib libjpeg libpng ninja parallel sdl2 zlib
+      run: echo "Assuming [cmake, libjpeg, libpng, parallel] are already installed" &&
+           brew install clang-format coreutils doxygen giflib ninja  sdl2 zlib
     - name: Build
       run: cd third_party/jpeg-xl &&
+           git apply ../../patches.diff &&
            export CMAKE_PREFIX_PATH=`brew --prefix giflib`:`brew --prefix libjpeg`:`brew --prefix libpng`:`brew --prefix sdl2`:`brew --prefix zlib` &&
            ./ci.sh release
     - name: Upload a Build Artifact
