Use jpeg-turbo instead of libjpeg

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,12 +16,12 @@ jobs:
       with:
         submodules: recursive
     - name: Install dependencies
-      run: echo "Assuming [cmake, libjpeg, libpng, parallel] are already installed" &&
-           brew install clang-format coreutils doxygen giflib ninja  sdl2 zlib
+      run: echo "Assuming [cmake, libpng, parallel] are already installed" &&
+           brew install clang-format coreutils doxygen giflib jpeg-turbo ninja sdl2 zlib
     - name: Build
       run: cd third_party/jpeg-xl &&
-           export CMAKE_PREFIX_PATH=`brew --prefix giflib`:`brew --prefix libjpeg`:`brew --prefix libpng`:`brew --prefix sdl2`:`brew --prefix zlib` &&
-           SKIP_TEST=1 ./ci.sh release -DCMAKE_FIND_FRAMEWORK=NEVER
+           export CMAKE_PREFIX_PATH=`brew --prefix giflib`:`brew --prefix jpeg-turbo`:`brew --prefix libpng`:`brew --prefix sdl2`:`brew --prefix zlib` &&
+           ./ci.sh release -DCMAKE_FIND_FRAMEWORK=NEVER
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
       with:
