--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -17,10 +17,10 @@ jobs:
         submodules: recursive
     - name: Install dependencies
       run: vcpkg install giflib libjpeg-turbo libpng sdl2 zlib &&
-           choco install doxygen ninja
-#      run: brew install coreutils doxygen giflib jpeg-turbo libpng ninja sdl2 zlib
-#    - name: Build
-#      run: cd third_party/jpeg-xl &&
+           choco install choco install doxygen.install ninja
+    - name: Build
+      run: cd third_party &&
+           cd jpeg-xl
 #           git apply ../../patches.diff &&
 #           export CMAKE_PREFIX_PATH=`brew --prefix giflib`:`brew --prefix jpeg-turbo`:`brew --prefix libpng`:`brew --prefix sdl2`:`brew --prefix zlib` &&
 #           ./ci.sh release -DCMAKE_FIND_FRAMEWORK=NEVER
